added initial layout, methods and intents
*added 6 activities
*added 6 layouts
*added basic styles
*need to refactor and improve on all items above
*rudimentary MVP exists
modified:   app/src/main/AndroidManifest.xml
modified:   app/src/main/java/com/example/android/musicalstructure/MainActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/NowPlayingActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/PreferencesActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/RecommendationsActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/TicketsActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/TrendingActivity.java
modified:   app/src/main/res/layout/activity_main.xml
new file:   app/src/main/res/layout/activity_now_playing.xml
new file:   app/src/main/res/layout/activity_preferences.xml
new file:   app/src/main/res/layout/activity_recommedations.xml
new file:   app/src/main/res/layout/activity_tickets.xml
new file:   app/src/main/res/layout/activity_trending.xml
modified:   app/src/main/res/values/colors.xml
new file:   app/src/main/res/values/dimens.xml/dimens.xml
modified:   app/src/main/res/values/strings.xml
modified:   app/src/main/res/values/styles.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MusicalStructure</string>
+    <string name="now_playing">Now Playing</string>
+    <string name="music_preferences">Music Preferences</string>
+    <string name="recommendations">Recommendations</string>
+    <string name="trending">Trending</string>
+    <string name="tickets">Tickets</string>
 </resources>
