added button and listener on NowPlayingActivity"
*general cleanup and formatting
*added button on activity_now_playing.xml to display activity_tickets.xml when clicked

modified:   app/src/main/java/com/example/android/musicalstructure/MainActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/NowPlayingActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/PreferencesActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/RecommendationsActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/TicketsActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/TrendingActivity.java
modified:   app/src/main/res/layout/activity_now_playing.xml
modified:   app/src/main/res/values/dimens.xml
modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="this_week">This Week</string>
     <string name="coming_month">Coming Month</string>
     <string name="next_6_months">Next 6 Months</string>
+    <string name="purchase_ticket">Purchase Ticket</string>
 </resources>
